# lightroom-classic-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
Formula/: lightroom-classic-mcp.rb
docs/: ARCHITECTURE.md  CLIENT_SETUP.md  DISTRIBUTION.md
plugin/LightroomMCPCustom.lrplugin/: ActionUtils.lua  CatalogActions.lua  CollectionActions.lua  CommandRouter.lua  DevelopActions.lua  ExportActions.lua  Info.lua  JSON.lua  Logger.lua  MaskActions.lua  MenuRestart.lua  MenuStart.lua  MenuStatus.lua  MenuStop.lua  MetadataActions.lua  PluginInit.lua  PluginShutdown.lua  SocketBridge.lua
scripts/: bootstrap_runtime.sh  diagnose_bridge.py  install_for_ai.sh  install_plugin.sh  package_release.sh  print_mcp_config.sh  run_server.sh  smoke_bridge.py  start_managed_server.sh  update_homebrew_formula.py
src/lightroom_mcp_custom/: __init__.py  bridge.py  develop_params.py  server.py  validators.py  workflows.py
tests/: test_integration.py  test_server.py  test_validators.py  test_workflows.py
