[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightroom-classic-mcp"
version = "0.4.0"
description = "MCP bridge for Adobe Lightroom Classic on macOS"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "4xiom" }
]
keywords = ["adobe", "lightroom", "lightroom-classic", "mcp", "photography"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp",
  "anyio",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[project.scripts]
lightroom-classic-mcp = "lightroom_mcp_custom.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
  "integration: requires a live Lightroom Classic bridge",
]
